// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component AddMissingRecord method getStepperIndex should return step [0] and Stepper should render the 1st step 1`] = `
<StandardPage
  title="Add a missing work to eSpace"
>
  <WithStyles(Component)
    activeStep={0}
    steps={
      Array [
        Object {
          "label": "Search for your work",
        },
        Object {
          "label": "Search results",
        },
        Object {
          "label": "Add your work",
        },
      ]
    }
  />
  <addRecordStep
    actions={Object {}}
    addRecordStep={[Function]}
    author={null}
    history={
      Object {
        "push": [MockFunction],
      }
    }
    location={
      Object {
        "pathname": "/records/add/find",
      }
    }
    match={Object {}}
    rawSearchQuery=""
  />
</StandardPage>
`;

exports[`Component AddMissingRecord method getStepperIndex should return step [1] and Stepper should render the 2nd step 1`] = `
<StandardPage
  title="Add a missing work to eSpace"
>
  <WithStyles(Component)
    activeStep={1}
    steps={
      Array [
        Object {
          "label": "Search for your work",
        },
        Object {
          "label": "Search results",
        },
        Object {
          "label": "Add your work",
        },
      ]
    }
  />
  <addRecordStep
    actions={Object {}}
    addRecordStep={[Function]}
    author={null}
    history={
      Object {
        "push": [MockFunction],
      }
    }
    location={
      Object {
        "pathname": "/records/add/results",
      }
    }
    match={Object {}}
    rawSearchQuery="This is a test"
  />
</StandardPage>
`;

exports[`Component AddMissingRecord method getStepperIndex should return step [2] and Stepper should render the 3rd step 1`] = `
<StandardPage
  title="Add a missing work to eSpace"
>
  <WithStyles(Component)
    activeStep={2}
    steps={
      Array [
        Object {
          "label": "Search for your work",
        },
        Object {
          "label": "Search results",
        },
        Object {
          "label": "Add your work",
        },
      ]
    }
  />
  <addRecordStep
    actions={Object {}}
    addRecordStep={[Function]}
    author={null}
    history={
      Object {
        "push": [MockFunction],
      }
    }
    location={
      Object {
        "pathname": "/records/add/new",
      }
    }
    match={Object {}}
    rawSearchQuery=""
  />
</StandardPage>
`;
